# wanliz_workspace

./: .bashrc_inc.sh.swp  .config_test_machine.sh.swp  .gitignore  FB and BAR1 size.txt  NVIDIA-VPN-SSO.sh  README.md  bashrc_inc.sh  bashrc_settings.sh  config_test_machine.sh  hosts  mappings.txt  nohup.out  nvinstall.sh  nvmake.sh  register_x11vnc_service.sh  run-with-perf.sh  run_with_hook.sh  run_with_perf.sh  run_with_picx.sh  setup_new_machine.sh  start-viewperf.sh  startup.service  startup.sh  test  test-env.sh  vpn_with_sso.sh  x11vnc_service_register.sh
autostart/: xhost.sh
helloworld/: CMakeLists.txt  start.sh
helloworld/shaders/: vertex_shader.glsl
helloworld/src/: glad.c  main.cpp  shader.cpp  shader.h
helloworld/src/glad/: glad.h
nvidiahook/: CMakeLists.txt
nvidiahooks/: main.cpp
templates/: perforce review.txt
test_vp/: run_catia.sh  run_catia_2.sh  run_catia_4.sh  run_snx.sh  run_snx_10.sh  test-catia-4.sh  test-energy-gdb.sh  test-snx-10-mangohud.sh  test-snx-10-perf-dsofunc.sh  test-snx-10-perf.sh  test-snx-10.sh  test-snx.sh  test_catia.sh  test_catia_4.sh  test_energy.sh  test_maya.sh  test_snx.sh  test_snx_10.sh  test_snx_10_mangohud.sh  test_snx_10_perf.sh
test_wayland/: disable-wayland.sh  disable_wayland.sh  enable-wayland.sh  enable_wayland.sh
